<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Grzegorz Rynkowski
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Hamster Client</string>
    <string name="description">Description</string>
    <string name="activity">Activity</string>
    <string name="category">Category</string>
    <string name="tags">Tags</string>
    <string name="apply">Apply</string>
    <string name="add_fact">Add a fact</string>
    <string name="open_fact_list">Open fact list</string>

    <!-- Activities' titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_fact_form">Fact Form</string>
    <string name="title_activity_fact_list">Fact List</string>
</resources>
